--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -48,6 +48,7 @@
               {% endfor %}
             </div>
 
+            {% if relations %}
             <div class=" my-8 mx-auto max-w-lg w-full bg-base-100 ">
               <a name="access_control"></a>
               <div class="flex gap-4 prose">
@@ -66,60 +67,73 @@
 
                   <thead>
                     <tr class="bg-base-300">
-                      <th>Access</th>
-                      <th>Full Name</th>
+                      <th><div class="flex flex-wrap gap-1"><p>Album</p><p>access</p></div></th>
+                      <th><div class="flex flex-wrap gap-1"><p>Photo</p><p>access</p></div></th>
+                      <th>User</th>
                       {#<th>Relation</th>#}
                     </tr>
                   </thead>
                   <tbody>
-                    {% for relation, relation_type in relations_dict.items %}
-                    <tr class="bg-base-200">
-                      <th>
-                        <label>
-                          <input type="checkbox" class="toggle toggle-success" name="user_{{ relation.id }}" {% if relation in users_with_access %}checked{% endif %} />
-                        </label>
-                      </th>
-                      <td>
-                        <a href="{% url 'accounts:account_view' relation.pk %}" class="cursor-pointer">
-                          <div class="flex items-center space-x-3">
-                            <div class="avatar">
-                              <div class="mask mask-squircle w-12 h-12">
-                                {% if relation.profile_picture %}
-                                {% thumbnail relation.profile_picture "50x50" crop="center" as im %}
-                                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
-                                  alt="{% firstof relation.get_full_name relation.email %}'s profile pic"
-                                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-                                {% endthumbnail %}
-                                {% else %}
-                                <img
-                                  src="https://api.dicebear.com/6.x/initials/svg?seed={% firstof relation.get_full_name relation.email %}"
-                                  width="50" height="50" alt=""
-                                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-                                {% endif %}
+                    {% for relation, allowed_photos_count in relations_dict.items %}
+                      {% if allowed_photos_count == photo_count %}
+                        {% firstof 'text-emerald-950 bg-green-300/60 border border-green-300/30' as tw_class %}
+                        {% firstof 'full' as innertext %}
+                        {% firstof 'border-emerald-400/60 border-2 text-base-content' as badge_color %}
+                      {% elif allowed_photos_count == 0 %}
+                        {% firstof 'text-red-950 bg-red-300/60 border  border-red-300/30' as tw_class %}
+                        {% firstof 'disabled' as innertext %}
+                        {% firstof 'border-red-400/60 border-2 text-base-content' as badge_color %}
+                      {% else %}
+                        {% firstof 'text-orange-950 bg-amber-300/60 border border-amber-300/30' as tw_class %}
+                        {% firstof 'partial' as innertext %}
+                        {% firstof 'border-amber-400/60 border-2 text-base-content' as badge_color %}
+                      {% endif %}
+                      <tr class="bg-base-200">
+                        <th>
+                          <label>
+                            <input type="checkbox" class="toggle toggle-success" name="user_{{ relation.id }}" {% if relation in users_with_access %}checked{% endif %} />
+                          </label>
+                        </th>
+                        <td class="relative">
+                            <p class="font-semibold text-center py-0.5 px-1 sm:mx-1 {{tw_class}} rounded-xl">{{innertext}}</p>
+                            <span class="absolute top-4 right-2 z-10  badge badge-sm {{badge_color}}">{{allowed_photos_count}}/{{photo_count}}</span>
+                        </td>
+                        <td>
+                          <a href="{% url 'accounts:account_view' relation.pk %}" class="cursor-pointer">
+                            <div class="flex items-center space-x-3">
+                              <div class="avatar">
+                                <div class="mask mask-squircle w-12 h-12">
+                                  {% if relation.profile_picture %}
+                                  {% thumbnail relation.profile_picture "50x50" crop="center" as im %}
+                                  <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
+                                    alt="{% firstof relation.get_full_name relation.email %}'s profile pic"
+                                    class="h-full w-full object-cover object-center group-hover:opacity-75">
+                                  {% endthumbnail %}
+                                  {% else %}
+                                  <img
+                                    src="https://api.dicebear.com/6.x/initials/svg?seed={% firstof relation.get_full_name relation.email %}"
+                                    width="50" height="50" alt=""
+                                    class="h-full w-full object-cover object-center group-hover:opacity-75">
+                                  {% endif %}
+                                </div>
+                              </div>
+                              <div>
+                                <div class="font-bold">{% firstof relation.get_full_name relation.email %}</div>
+                                <p class="text-sm opacity-50 text-ellipsis">{{relation.email}}</p>
                               </div>
                             </div>
-                            <div>
-                              <div class="font-bold">{% firstof relation.get_full_name relation.email %}</div>
-                              <p class="text-sm opacity-50 text-ellipsis">{{relation.email}}</p>
-                            </div>
-                          </div>
-                        </a>
-                      </td>
-                      {% comment %}
-                      <td>
-                        <span class="badge badge-ghost badge-sm">{{relation_type}}</span>
-                      </td>
-                      {% endcomment %}
-                    </tr>
+                          </a>
+                        </td>
+                      </tr>
                     {% endfor %}
                   </tbody>
                 </table>
               </div>
 
             </div>
+            {% endif %}
 
             <br>
-
 
             {% if messages %}
             <div class="toast">
@@ -152,7 +166,7 @@
                 </svg>
                 Back
               </a>
-              <button type="submit" name="album_form" class="flex gap-4 btn btn-primary sm:col-span-2 md:col-span-1 order-2 sm:order-3 md:order-2">
+              <button type="submit" name="album_form" class="flex gap-4 btn btn-outline sm:col-span-2 md:col-span-1 order-2 sm:order-3 md:order-2">
                 <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.1716 1C18.702 1 19.2107 1.21071 19.5858 1.58579L22.4142 4.41421C22.7893 4.78929 23 5.29799 23 5.82843V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V4C1 2.34315 2.34315 1 4 1H18.1716ZM4 3C3.44772 3 3 3.44772 3 4V20C3 20.5523 3.44772 21 4 21L5 21L5 15C5 13.3431 6.34315 12 8 12L16 12C17.6569 12 19 13.3431 19 15V21H20C20.5523 21 21 20.5523 21 20V6.82843C21 6.29799 20.7893 5.78929 20.4142 5.41421L18.5858 3.58579C18.2107 3.21071 17.702 3 17.1716 3H17V5C17 6.65685 15.6569 8 14 8H10C8.34315 8 7 6.65685 7 5V3H4ZM17 21V15C17 14.4477 16.5523 14 16 14L8 14C7.44772 14 7 14.4477 7 15L7 21L17 21ZM9 3H15V5C15 5.55228 14.5523 6 14 6H10C9.44772 6 9 5.55228 9 5V3Z" fill="currentColor"></path></svg>
                 Save changes
               </button>
