--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -162,9 +162,12 @@
         Back
       </a>
       {% if user == album.creator %}
-      <a href="{% url 'albums:album-access' album.pk %}" class="btn btn-outline">
-        Album Settings
-      </a>
+        <a href="{% url 'albums:album-access' album.pk %}" class="btn btn-outline">
+          <svg class="w-6 h-6 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path>
+          </svg>
+          Album Settings
+        </a>
       {% endif %}
     </div>
   </div>
