--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,7 +50,9 @@
   <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
   <!-- Theme change script (https://github.com/saadeghi/theme-change) -->
   <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
-  <!-- Alpine js scripts -->
+  <!-- Alpine Plugins -->
+  <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
+  <!-- Alpine Core -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <!-- custom js script -->
   <script src="{% static 'js/script.js' %}"></script>
