--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -47,12 +47,11 @@
               </div>
               {% endfor %}
 
-              <button form="access_form" type="submit" name="album_form" class="flex gap-4 btn btn-outline sm:col-span-2 md:col-span-1 order-2 sm:order-3 md:order-2">
+              <button id="btn-access-form" form="access_form" type="submit" name="album_form" class="hidden gap-4 btn btn-outline sm:col-span-2 md:col-span-1 order-2 sm:order-3 md:order-2">
                 <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.1716 1C18.702 1 19.2107 1.21071 19.5858 1.58579L22.4142 4.41421C22.7893 4.78929 23 5.29799 23 5.82843V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V4C1 2.34315 2.34315 1 4 1H18.1716ZM4 3C3.44772 3 3 3.44772 3 4V20C3 20.5523 3.44772 21 4 21L5 21L5 15C5 13.3431 6.34315 12 8 12L16 12C17.6569 12 19 13.3431 19 15V21H20C20.5523 21 21 20.5523 21 20V6.82843C21 6.29799 20.7893 5.78929 20.4142 5.41421L18.5858 3.58579C18.2107 3.21071 17.702 3 17.1716 3H17V5C17 6.65685 15.6569 8 14 8H10C8.34315 8 7 6.65685 7 5V3H4ZM17 21V15C17 14.4477 16.5523 14 16 14L8 14C7.44772 14 7 14.4477 7 15L7 21L17 21ZM9 3H15V5C15 5.55228 14.5523 6 14 6H10C9.44772 6 9 5.55228 9 5V3Z" fill="currentColor"></path></svg>
                 Save changes
               </button>
             </div>
-
 
 
             {% if relations %}
@@ -101,7 +100,6 @@
                       <tr class="bg-base-200">
                         <th class="px-2 text-center">
                           <label>
-                            <!-- <input id="albumaccess-checkbox" type="checkbox" class="toggle toggle-{{toggle_color}}" name="user_{{ relation.id }}" {% if relation in users_with_access %}checked{% endif %} /> -->
                             {% include 'partials/modal_albumaccess.html' %}
                           </label>
                         </th>
@@ -180,8 +178,15 @@
             </div>
             {% endif %}
 
-            <p class="hidden alert-info alert-success toggle-warning text-gray-950 text-amber-950 opacity-30 ring-amber-600 ring-green-600 ring-gray-600"></p>
-
+            {# used for npm tailwind-watch & tailwind-build #}
+            {% comment %}
+            <p class="alert-info  toggle-warning  text-amber-950 opacity-30  ring-green-600 border-green-400/60"></p>
+            <p class="text-green-950 bg-green-300/80 border border-green-300/30 toggle-success alert-success"></p>
+            <p class="text-gray-950 bg-gray-300/80 border border-gray-300/30  ring-gray-600"></p>
+            <p class="text-amber-950 bg-amber-300/80 border border-amber-300/30 ring-amber-600"></p>
+            <p class="border-amber-400/60"></p>
+            <p class="border-amber-400/60"></p>
+            {% endcomment %}
 
             <hr>
             <div class="mt-10 grid grid-cols-1 sm:grid-cols-2 max-w-lg w-full mx-auto gap-4  ">
@@ -216,4 +221,11 @@
 
 {% block javascript %}
   <script src="{% static 'albums/js/modal_photo_access.js' %}"></script>
+  <script>
+    function showSaveButton() {
+      const btnToShow = document.getElementById('btn-access-form');
+      btnToShow.classList.add('slide-and-fade');
+      btnToShow.classList.remove('hidden');
+    }
+  </script>
 {% endblock %}
