--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -25,3 +25,20 @@
   opacity: 0;
   transition: opacity 0.5s ease;
 }
+
+/* Album access Save button */
+
+@keyframes slideAndFade {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.slide-and-fade {
+  animation: slideAndFade .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
