--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -184,7 +184,7 @@
             <p class="text-green-950 bg-green-300/80 border border-green-300/30 toggle-success alert-success"></p>
             <p class="text-gray-950 bg-gray-300/80 border border-gray-300/30  ring-gray-600"></p>
             <p class="text-amber-950 bg-amber-300/80 border border-amber-300/30 ring-amber-600"></p>
-            <p class="border-amber-400/60"></p>
+            <p class="border-amber-400/60 input-sm"></p>
             <p class="border-amber-400/60"></p>
             {% endcomment %}
 
