--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -40,5 +40,5 @@
 }
 
 .slide-and-fade {
-  animation: slideAndFade .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  animation: slideAndFade 1.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
