--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -19,7 +19,7 @@
         </div>
       {% endif %}
 
-      <p class="mt-2 text-sm text-right opacity-0 group-hover:opacity-80">Uploaded by <span class="font-semibold">{% firstof photo.uploaded_by.first_name photo.uploaded_by.email %}</span></p>
+      <p class="mt-2 text-sm text-right font-light opacity-0 group-hover:opacity-80">Uploaded by <span class="font-medium">{% firstof photo.uploaded_by.first_name photo.uploaded_by.email %}</span></p>
 
       {% if next %}
       <div class="absolute bottom-1/2 right-1">
@@ -32,11 +32,11 @@
   </div>
   {# Photo description #}
   {% if photo.description %}
-    <div class="flex place-content-center gap-4 mx-auto max-w-2xl lg:max-w-4xl px-4 lg:px-8 py-4 lg:py-6 mb-6 mt-2 border rounded-2xl">
+    <div class="flex place-content-center gap-4 mx-auto max-w-2xl lg:max-w-4xl px-4 lg:px-8 py-4 lg:py-6 mb-6 mt-2 border rounded-md">
       <div class="text-lg">
         <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M16.19 2H7.81C4.17 2 2 4.17 2 7.81V16.18C2 19.83 4.17 22 7.81 22H16.18C19.82 22 21.99 19.83 21.99 16.19V7.81C22 4.17 19.83 2 16.19 2ZM11.61 14.84C11.61 15.93 10.76 16.78 9.67 16.78H8.19C7.12 16.78 6.25 15.91 6.25 14.84V12.17C6.25 9.09 6.92 8.4 8.71 7.34C8.83 7.27 8.96 7.24 9.09 7.24C9.35 7.24 9.6 7.37 9.74 7.61C9.95 7.97 9.83 8.43 9.48 8.64C8.27 9.34 7.85 9.6 7.77 11.41H9.68C10.77 11.41 11.62 12.26 11.62 13.35V14.84H11.61ZM17.75 14.84C17.75 15.93 16.9 16.78 15.81 16.78H14.32C13.25 16.78 12.38 15.91 12.38 14.84V12.17C12.38 9.09 13.05 8.4 14.84 7.34C14.96 7.27 15.09 7.24 15.22 7.24C15.48 7.24 15.73 7.37 15.87 7.61C16.08 7.97 15.96 8.43 15.61 8.64C14.4 9.36 13.98 9.62 13.9 11.43H15.81C16.9 11.43 17.75 12.28 17.75 13.37V14.84Z"></path> </g></svg>
       </div>
-      <div class="font-semibold">
+      <div class="font-medium tracking-wide">
         {{photo.description}}
       </div>
       <div class="flex text-lg items-end">
@@ -61,7 +61,6 @@
     <form method="POST" class="mt-8">
       {% csrf_token %}
       <div class="grid grid-rows-2 space-y-2 ">
-        <!-- <textarea class="textarea textarea-primary textarea-xs w-full max-w-lg " name="new_comment" id="id_new_comment" placeholder="Send a comment.."></textarea> -->
         {{comment_form.body}}
         <div class="flex place-content-end">
           <button type="submit" class="btn btn-neutral btn-sm md:btn-md lg:btn-lg rounded-xl">
@@ -74,7 +73,7 @@
     <br>
     <hr>
     <!-- Back / Delete-->
-    <section class="mt-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+    <section class="mt-10 grid grid-cols-2 sm:grid-cols-3 gap-4">
       <a href="{% url 'albums:album_detail' photo.album.pk %}" class="btn btn-block btn-neutral">
         <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
           <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
@@ -94,7 +93,7 @@
         </a>
       </div>
 
-      <div class="tooltip tooltip-top sm:col-span-2 md:col-span-1" data-tip="delete photo">
+      <div class="tooltip tooltip-top col-span-2 sm:col-span-1" data-tip="delete photo">
         <a href="{% url 'photos:photo_delete' photo.pk %}" class="btn btn-block btn-outline btn-error">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="h-5 w-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
