--- a/albums/templates/albums/albums.html
+++ b/albums/templates/albums/albums.html
@@ -114,7 +114,7 @@
             </div>
           {% endif %}
         </div>
-        <h3 class="mt-4 text-sm">{{ album.photo_count }} photos | uploaded by {{ album.creator.first_name }} </h3>
+        <h3 class="mt-4 text-sm">{{ album.photo_count }} photos | uploaded by {% firstof album.creator.get_full_name album.creator.email %} </h3>
         <p class="mt-1 text-lg font-medium">{{ album.title }}</p>
       </a>
       {% endfor %}
