feature-breadcrumbs done + styling

--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -5,6 +5,10 @@
 {% load thumbnail %}
 {% load static %}
 
+{% block  breadcrumbs %}
+  {% include 'partials/breadcrumb_settings.html' %}
+{% endblock breadcrumbs %}
+
 {% block body %}
 <div class="bg-base-200">
   <section class="relative block h-[400px]">
