--- a/albums/templates/albums/album_form.html
+++ b/albums/templates/albums/album_form.html
@@ -2,6 +2,10 @@
 
 {% block title %}Your Album{% endblock title %}
 
+{% block breadcrumbs %}
+  {% include 'partials/breadcrumb_add_album.html' %}
+{% endblock breadcrumbs %}
+
 {% block body %}
 <div class="bg-base-100">
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-20 lg:max-w-7xl lg:px-8">
@@ -23,7 +27,7 @@
           <div class="hidden textarea-bordered"></div> <!-- to add missing tailwind styling-->
           <div class="mt-4">
               <label for="images" class="text-xl font-bold tracking-tight">Upload photos:</label>
-              <input type="file" name="images" multiple class="mt-4 block file-input file-input-bordered file-input-primary w-full max-w-xs" required>
+              <input type="file" name="images" multiple class="mt-4 block file-input file-input-bordered w-full max-w-xs" required>
               <div class="flex gap-4 mt-8">
                 <a href="{% url 'albums:albums_view' %}" class="btn btn-neutral">
                   <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
@@ -32,7 +36,7 @@
                   </svg>
                   Back
                 </a>
-                <button type="submit" class="inline-block btn btn-primary text-white">Save</button>
+                <button type="submit" class="inline-block btn btn-outline">Save</button>
               </div>
           </div>
         </form>
