--- a/photos/templates/partials/comment_right.html
+++ b/photos/templates/partials/comment_right.html
@@ -15,10 +15,10 @@
         {% firstof comment.updated|timesince|up_to:',' comment.created|timesince|up_to:',' %} ago{% if comment.updated|date != comment.created|date %} (edited){% endif %}
       </div>
       {% if comment in comments_from_user %}
-      <div class="button-pair float-left -mt-10 -ml-5 inline-flex items-center ">
+      <div class="button-pair float-left -mt-10 -ml-6 inline-flex items-center ">
         <button id="delete-comment" class="delete-button opacity-0 group-hover:opacity-100 group-hover:animate-bounce">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5 fill-slate-100 dark:fill-transparent">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 fill-slate-100 dark:fill-transparent">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
           </svg>
         </button>
         <form method="POST">
