--- a/photos/templates/photos/photo_confirm_delete.html
+++ b/photos/templates/photos/photo_confirm_delete.html
@@ -1,16 +1,22 @@
 {% extends 'core/base.html' %}
+{% load thumbnail %}
 
 {% block title %}Delete Photo{% endblock %}
 
 {% block body %}
 <div class="grid place-content-center">
-  <div class="prose prose-sm md:prose-base text-center">
-    <h2>Delete the Photo "{{photo.pk}}" ?</h2>
+  <div class=" text-center">
+    <h2 class="text-2xl font-medium">Delete the Photo "{{photo.pk}}" ?</h2>
+    <div class="py-10">
+      {% thumbnail photo.image "600x600" crop="center" as im %}
+        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ im.title }}" class="inline-block h-48 w-48 rounded-lg">
+      {% endthumbnail %}
+    </div>
     <form method="POST">
       {% csrf_token %}
       <div class="flex gap-2 py-4 justify-center">
         <input type="submit" value="Yes" class="btn btn-error hover:brightness-75">
-        <a href="{% url 'albums:album_detail' photo.album.pk %}" class="btn btn-neutral">No</a>
+        <a href="{% url 'photos:photo_detail' photo.pk %}" class="btn btn-neutral">No</a>
       </div>
 
 
