--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -5,8 +5,12 @@
 
 {% block title %}Photos{% endblock title %}
 
+{% block breadcrumbs %}
+  {% include 'partials/breadcrumb_photo_detail.html' %}
+{% endblock breadcrumbs %}
+
 {% block body %}
-<div class="mx-auto max-w-2xl px-4 py-8 sm:px-6 sm:py-16 lg:max-w-4xl lg:px-8">
+<div class="mx-auto max-w-2xl px-4 py-10 sm:px-6 sm:py-16 lg:max-w-4xl lg:px-8">
   <!-- Detailed Photo -->
   <div class="block">
     <div class="relative mx-auto w-full group">
