--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -4,8 +4,12 @@
 
 {% block title %}Photo Settings{% endblock title %}
 
+{% block breadcrumbs %}
+  {% include 'partials/breadcrumb_photo_settings.html' %}
+{% endblock breadcrumbs %}
+
 {% block body %}
-  <div class="mx-auto max-w-2xl px-4 py-8 sm:px-6 sm:py-16 lg:max-w-4xl lg:px-8">
+  <div class="mx-auto max-w-2xl px-4 py-10 sm:px-6 sm:py-16 lg:max-w-4xl lg:px-8">
     <!-- Detailed Photo -->
     <section class="block">
       <div class="mx-auto max-w-2xl sm:w-3/4">
